# pannello_fotovoltaico_esp32

./: README.md
pannello_esp32/: CMakeLists.txt
pannello_esp32/main/: CMakeLists.txt  main.c
pannello_esp32/main/inc/: ldr_adc.h  servo.h
pannello_esp32/main/src/: ldr_adc.c  servo.c
